# Instagram-clone

./: .env  .gitignore  README.md  db.sqlite3  pyproject.toml
authentication/: admin.py  context_processors.py  forms.py  models.py  views.py
authentication/migrations/: 0001_initial.py  0002_auto_20210406_0045.py  0002_auto_20210415_0420.py  0002_instagramuser_avatar.py  0002_instagramuser_following.py  0003_auto_20210415_0130.py  0003_instagramuser_followers.py  0004_auto_20210406_1626.py  0004_auto_20210415_0245.py  0005_auto_20210409_2221.py  0005_merge_20210415_1542.py  0006_auto_20210415_1917.py
comment/: forms.py  models.py  views.py
comment/migrations/: 0001_initial.py  0002_comment_creator.py  0002_comment_photo.py  0002_comment_viewed.py
covid/: forms.py  views.py
dogs/: views.py
error500/: apps.py  views.py
instagramclone/: settings.py  urls.py
message/: forms.py  models.py  views.py
message/migrations/: 0001_initial.py  0002_auto_20210418_2144.py  0003_auto_20210419_1853.py  0004_auto_20210419_1854.py
news/: views.py
photo/: admin.py  forms.py  models.py  views.py
photo/migrations/: 0001_initial.py  0002_auto_20210407_2153.py  0002_auto_20210414_0049.py  0002_photo_comment.py  0002_photo_total_likes.py  0003_auto_20210412_1421.py  (+7 more)
shoes/: views.py
templates/: 404.html  about.html  base.html  chat.html  comments.html  covid-19.html  dogs.html  edit.html  edit_comments.html  index.html  login.html  message.html  new-notices.html  news.html  photo.html  photo_detail.html  shoes.html  sign_up.html  user_detail.html
user/: views.py
(+14 files in other folders)
