[tool.poetry]
name = "instagram-clone"
version = "0.1.0"
description = "Kenzie academy capstone"
authors = ["Deidre Boddie <deidre.boddie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
ipdb = "^0.13.7"
Pillow = "^8.2.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
